@@ -6,6 +6,7 @@ META.json
 README
 lib/CPAN/Testers/Common/DBUtils.pm
 t/01base.t
+t/10database.t
 t/90podtest.t
 t/91podcover.t
 t/94metatest.t
