@@ -38,6 +38,7 @@
             "recommends": {
                 "Test::CPAN::Meta": "0",
                 "Test::CPAN::Meta::JSON": "0",
+                "Test::Database": "0",
                 "Test::Pod": "1.00",
                 "Test::Pod::Coverage": "0.08"
             }
