@@ -17,6 +17,7 @@ requires:
 recommends:
   Test::CPAN::Meta:       0
   Test::CPAN::Meta::JSON: 0
+  Test::Database:         0
   Test::Pod:              1.00
   Test::Pod::Coverage:    0.08
 build_requires:
