@@ -7,6 +7,7 @@ Revision history for CPAN-Testers-Common-DBUtils
         - added minimum perl version (5.006).
         - reworked Makefile.PL for clarity.
         - updated test scripts.
+        - added tests using Test::Database.
 
 0.06    2011-08-01
         - added repeat query methods to send multiple common statements in a 
